Script bug-fixes, necessetated style changes
  - Fixed bad behaviors from too small a period on intervals
  - Don't share image and next-image divs across all tabs, each tab has
    own
  - Change image and next-image styles to cover images whose ids end in image or
    next-image

--- a/assets/style.css
+++ b/assets/style.css
@@ -100,8 +100,7 @@ tabs {
   height: 100%;
   color: #B4EAE6;
 }
-
-#image, #next-image {
+div[id$="-image"] {
   background-size: contain;
   background-position: 50% 40%;
   background-repeat: no-repeat;
